# archiver-bot

./: .gitignore  Makefile  README.md  go.mod  main.go
downloader/: config.yaml  go.sum  main.go
renderer/: Cargo.toml  channel.hbs  index.hbs  main.css
renderer/src/: main.rs
