[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
authors = ["Sean Ray <seanray410@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.18"
num_cpus = "1.13.1"
crossbeam-channel = "0.5"
handlebars = "4.3.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
chrono = "0.4.19"
html-minifier = "3.0.15"

[profile.release]
lto = "fat"
panic = "abort"
strip = "symbols"
